# drone-bird-detector

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
examples/australian_pelican-gsd_0.018/: included_classes.txt
src/drone_bird_detector/: class_filtering.py  cli.py  dataset.py  inference.py  model.py  roi_heads_multiclass.py  tiling.py  utils.py
tests/: integration_test.py
