[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "drone-bird-detector"
version = "0.1.0"
description = "A command-line tool for detecting and identifying birds in drone imagery for ecological surveys."
authors = [
  { name="Joshua P. Wilson" }
]
readme = "README.md"
requires-python = ">=3.13"
keywords = ["ecology", "birds", "drone", "computer-vision", "conservation"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Biology"
]
dependencies = [
  "torch>=2.9.1",
  "torchvision>=0.24.1",
  "pandas>=2.3.3",
  "huggingface_hub>=1.3.2",
  "typer>=0.21.1",
  "tqdm>=4.67.1"
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2"
]

[project.scripts]
drone-bird-detector = "drone_bird_detector.cli:main"